fixed overflow of GridMenu

--- a/app/src/components/GridMenu.styl
+++ b/app/src/components/GridMenu.styl
@@ -5,6 +5,8 @@
   border-radius 3px
   margin-top 5em
   margin-bottom 2em
+  padding-left 0 !important
+  padding-right @padding-left
 
   .col
     position relative
